--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.3.0",
+    "swiper": "^11.1.15",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
