--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eslint/config-array": "^0.19.0",
     "@eslint/object-schema": "^2.1.4",
     "@hookform/resolvers": "^3.3.4",
+    "@sendgrid/mail": "^8.1.4",
     "glob": "^11.0.0",
     "next": "^15.0.3",
     "nodemailer": "^6.9.16",
