--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.3.0",
     "rimraf": "^6.0.1",
     "swiper": "^11.1.15",
+    "tailwindcss-animated": "^1.1.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
