--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@eslint/object-schema": "^2.1.4",
     "@hookform/resolvers": "^3.3.4",
     "@sendgrid/mail": "^8.1.4",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "glob": "^11.0.0",
     "next": "^15.0.3",
